--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -88,4 +88,8 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	
+	<error-page>
+		<error-code>404</error-code>
+		<location>/WEB-INF/jsp/error/404.jsp</location>
+	</error-page>
 </web-app>
